--- a/index.html
+++ b/index.html
@@ -411,16 +411,15 @@
                     <div class="hero__title-strong-text hero__title-strong-text--color-5">ONGs</div>
                 </div>
             </div>
-            <h2 class="hero__explanation"> Tenha um site incrivel para impulsionar o seu negócio, <span class="hero__explanation--strong">à
-                    uma fração do tempo, custo e empenho tradicionais.</span>
+            <h2 class="hero__explanation"> Tenha um site incrivel para impulsionar o seu negócio, <span class="hero__explanation--strong">sem
+                    demora e altos custos de agencias tradicionais.</span>
             </h2>
-            <h4 class="hero__explanation-form">Seja avisado quando lançar, somente 4 vagas para 2019! </h4>
             <div class="button-wrap">
                 <form id="email-form-hero" name="email-form-hero" data-name="Email Form Hero" class="form-hero" method="post"
                     enctype="multipart/form-data" data-drip-embedded-form="840279964" action="https://www.getdrip.com/forms/840279964/submissions">
                     <input type="email" id="drip-email" name="fields[email]" type="text" class="hero-inbox w-input"
                         maxlength="256" required="" placeholder="Seu melhor e-mail">
-                    <input type="submit" value="Me avise quando lançar! 💌" data-drip-attribute="sign-up-button" class="submit-button-hero w-button boosted__btn">
+                    <input type="submit" value="Quero um website! 💌" data-drip-attribute="sign-up-button" class="submit-button-hero w-button boosted__btn">
                 </form>
             </div>
         </div>
@@ -608,12 +607,12 @@
     <div class="portfolio__container w-container">
         <h3 class="section__title">
             Parcerias transformadoras
-         
+
         </h3>
         <h4 class="section__subtitle portfolio__subtitle">
             Alguns dos maravilhosos clientes
           <span class="section__subtitle--strong">que já trabalham comigo</span>
-            
+
         </h4>
     </div>
     <div data-delay="4000" data-animation="cross" data-autoplay="1" data-duration="500" data-infinite="1" class="portfolio__slider w-slider">
