--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
-<!-- PUBLICADO EM 27 DE MAIO -->
 <html>
 
 <head>
     <meta charset="utf-8">
-    <title>Websites inteligentes e focados no seu objetivo. | Impulsite </title>
+    <title>Websites inteligentes e focados no seu objetivo. | Impulsite | By Matheus Cezar Frontend </title>
     <meta content="Sites especialmente desenhados e desenvolvidos para entregar uma experiência visceral ao usuário e trazer resultados sensacionais ao seu negócio, direto do Vale do Itajaí - SC"
         name="description">
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <link href="styles.css" rel="stylesheet" type="text/css">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
+<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#000000">
+<meta name="msapplication-TileColor" content="#ffc40d">
+<meta name="theme-color" content="#ffffff">
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js" type="text/javascript"></script>
     <script type="text/javascript">
         WebFont.load({
@@ -412,14 +418,14 @@
                 </div>
             </div>
             <h2 class="hero__explanation"> Tenha um site incrivel para impulsionar o seu negócio, <span class="hero__explanation--strong">sem
-                    demora e altos custos de agencias tradicionais.</span>
+                    a demora e os altos custos de agencias tradicionais.</span>
             </h2>
-            <div class="button-wrap">
+            <div class="button-wrap" style="    margin: 2rem 1rem;">
                 <form id="email-form-hero" name="email-form-hero" data-name="Email Form Hero" class="form-hero" method="post"
                     enctype="multipart/form-data" data-drip-embedded-form="840279964" action="https://www.getdrip.com/forms/840279964/submissions">
                     <input type="email" id="drip-email" name="fields[email]" type="text" class="hero-inbox w-input"
                         maxlength="256" required="" placeholder="Seu melhor e-mail">
-                    <input type="submit" value="Quero um website! 💌" data-drip-attribute="sign-up-button" class="submit-button-hero w-button boosted__btn">
+                    <input type="submit" value="Quero um site poderoso!" data-drip-attribute="sign-up-button" class="submit-button-hero w-button boosted__btn">
                 </form>
             </div>
         </div>
@@ -1105,7 +1111,7 @@
                     <img src="597f09dd8125aa0001ab72fe_art_spotlight.svg" class="form__spotlight--1">
                     <img src="597f09dd8125aa0001ab72fe_art_spotlight.svg" class="form__spotlight--2"> </div>
                 <div class="form" style="text-align:center; display:block">
-                    <h2>Trabalho com pouquíssimos clientes por ano, somente 4 vagas para 2019! </h2>
+                    <h2>Trabalho com pouquíssimos clientes por ano, aplique somente se estiver totalmente comprometido em crescer seu empreendimento! </h2>
                     <h4>Vou cuidar do seu projeto com 110% de dedicação e trazer os melhores resultados para seu
                         negócio!</h4>
                     <div class="button-wrap" style="width:100%; padding:80px">
@@ -1113,7 +1119,7 @@
                             method="post" enctype="multipart/form-data" data-drip-embedded-form="840279964" action="https://www.getdrip.com/forms/840279964/submissions">
                             <input type="email" id="drip-email" name="fields[email]" type="text" class="hero-inbox w-input"
                                 maxlength="256" required="" placeholder="Seu melhor e-mail" style="background: #f9f9f9;">
-                            <input type="submit" value="Me avise quando lançar! 💌" data-drip-attribute="sign-up-button"
+                            <input type="submit" value="Quero o melhor site" data-drip-attribute="sign-up-button"
                                 class="submit-button-hero w-button boosted__btn"> </form>
                     </div>
                     <div class="form__footnote">
@@ -1144,7 +1150,7 @@
                 <img src="597f42203c39b00001eae87b_art_astronaut.hand.up.svg" class="image-7"> </div>
             <div class="form__ground-satellite">
                 <img src="597f4236a3098e00012dcb1f_art_ground.satellite.svg" class="image-6"> </div>
-            <div class="form__copyright"> Feito com ❤️ por <strong>Matheus Cezar</strong> , em Itajai -SC. </div>
+            <div class="form__copyright"> Feito por <strong>Matheus Cezar</strong> , em Itajai -SC. </div>
             <div class="form__assuming">*Prazo é contado a partir da conclusão do pontapé inicial, assumindo que recebo
                 tudo que é necessário de você em tempo hábil.</div>
         </div>
@@ -1154,24 +1160,23 @@
                 <div class="who__row w-row">
                     <div class="why__column w-col w-col-2 w-col-medium-2 w-col-small-small-stack w-col-tiny-tiny-stack">
                         <div class="why__column-graphic-container">
-                            <img alt="Matheus Cezar da Silva" src="Matheus_Cezar_Impulsite.jpg" class="why__column-graphic"
+                           <a href="https://matheuscezar.me"> <img alt="Matheus Cezar da Silva" src="Matheus_Cezar_Impulsite.jpg" class="why__column-graphic"
                                 style="    max-height: 200px;
 border-radius: 100%;
-"> </div>
+"> </a></div>
                     </div>
                     <div class="why__column w-col w-col-10 w-col-medium-10 w-col-small-small-stack w-col-tiny-tiny-stack">
                         <div class="amazing__step-text"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Oi! Meu nome é <strong
                                 class="amazing__step-text--strong">Matheus Cezar</strong> , sou empreendedor digital,
-                            desenvolvedor web, nerd e apaixonado pelo empreendedorismo, acredito que o empreendedorismo
-                            pode mudar o mundo. <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;A <strong class="amazing__step-text--strong">minha
-                                missão é ajudar empreendedores do Brasil à impulsionarem seus negócios</strong> ,
-                            usando técnicas e experimentos de growth hacking com auxílio de ferramentas digitais. <br>
+                            desenvolvedor web, nerd e apaixonado pelo empreendedorismo, pois acredito que assim mudamos o mundo.
+                             <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;A <strong class="amazing__step-text--strong">minha
+                                missão é ajudar empreendedores obstinados à impulsionarem seus negócios,</strong>
+                            usando técnicas e experimentos de growth hacking e com o emprego das melhores ferramentas digitais. <br>
                             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Para isso, vou lutar pelo "UAU!" diariamente,
-                            desenvolvendo experiências incríveis para a internet e compartilhando conhecimento com quem
+                            desenvolvendo experiências incríveis para a web e compartilhando conhecimento com quem
                             está realmente comprometido. <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Sou criativo,
                             íntegro, responsável, comprometido e com dedicação irrazoável, <strong class="amazing__step-text--strong">não
-                                vou medir esforços para entregar só os melhores websites para cada nicho</strong> e o
-                            melhor atendimento com foco total em seu crescimento! </div>
+                                vou medir esforços para entregar só os melhores websites do mundo para cada nicho! </strong>  </div>
                     </div>
                 </div>
             </div>
