--- a/faq.html
+++ b/faq.html
@@ -203,7 +203,7 @@
 
                                     <strong>
                                         <a
-                                            class="typeform-share link"
+                                            class=" link"
                                             style="color:#550db8"
                                             href="https://matheus6417.typeform.com/to/v2JV00"
                                             data-mode="popup"
@@ -423,7 +423,7 @@
                 <div class="faq-row__column-right">
                     <div class="boosted__btn-container">
                         <a
-                            class="typeform-share button boosted__btn w-button"
+                            class=" button boosted__btn w-button"
                             href="https://matheus6417.typeform.com/to/v2JV00"
                             data-mode="popup"
                             data-hide-headers=true
