--- a/faq.html
+++ b/faq.html
@@ -199,32 +199,8 @@
                                     inteligentes, mas geralmente encontro novos empreendimentos com os quais ainda não
                                     trabalhei e que se alinham muito bem com meu serviço de website inteligente.</p>
                                 <p data-new-link="true">
-                                    Estou sempre aberto a novas possibilidades e incentivo você a
-
-                                    <strong>
-                                        <a
-                                            class=" link"
-                                            style="color:#550db8"
-                                            href="https://matheus6417.typeform.com/to/v2JV00"
-                                            data-mode="popup"
-                                            target="_blank"
-                                        >conversar comigo</a>
-                                        <script crossorigin="anonymous">
-                                            (function () {
-                                                var qs, js, q, s, d = document, gi = d.getElementById, ce = d.createElement, gt = d.getElementsByTagName, id = "typef_orm_share", b = "https://embed.typeform.com/";
-                                                if (!gi.call(d, id)) {
-                                                    js = ce.call(d, "script");
-                                                    js.id = id;
-                                                    js.src = b + "embed.js";
-                                                    q = gt.call(d, "script")[0];
-                                                    q.parentNode.insertBefore(js, q)
-                                                }
-                                            }
-                                            )()
-                                        </script>
-                                        <!-- <a href="index#form" data-rt-link-type="external">entrar em contato conosco</a> -->
-                                    </strong>
-                                    , para que eu possa avaliar adequadamente suas necessidades e ver se elas podem ser
+                                    Estou sempre aberto a novas possibilidades e incentivo você a conversar comigo, para
+                                    que eu possa avaliar adequadamente suas necessidades e ver se elas podem ser
                                     impulsionadas com um site inteligente.
                                 </p>
                                 <h3>
@@ -424,26 +400,9 @@
                     <div class="boosted__btn-container">
                         <a
                             class=" button boosted__btn w-button"
-                            href="https://matheus6417.typeform.com/to/v2JV00"
-                            data-mode="popup"
-                            data-hide-headers=true
+                            href="https://api.whatsapp.com/send?phone=+5547988194381"
                             target="_blank"
                         >Ok, vamos lá!</a>
-                        <script crossorigin="anonymous">
-                                (function () {
-                                    var qs, js, q, s, d = document, gi = d.getElementById, ce = d.createElement, gt = d.getElementsByTagName, id = "typef_orm_share", b = "https://embed.typeform.com/";
-                                    if (!gi.call(d, id)) {
-                                        js = ce.call(d, "script");
-                                        js.id = id;
-                                        js.src = b + "embed.js";
-                                        q = gt.call(d, "script")[0];
-                                        q.parentNode.insertBefore(js, q)
-                                    }
-                                }
-                                )()
-                        </script>
-                        <!-- <a href="#form" class="boosted__btn w-button">Entre
-                                  <span class="boosted__btn--emphasized">em contato</span>!</a> -->
                     </div>
                 </div>
             </div>
