--- a/index.html
+++ b/index.html
@@ -615,7 +615,7 @@
                         <div class="amazing__step-text"> Entrego <strong class="amazing__step-text--strong">uma
                                 combinação perfeita</strong> de uma <strong class="amazing__step-text--strong">landing
                                 page de alta conversão</strong> e um <strong class="amazing__step-text--strong">website
-                                tradicional</strong> , para você se destacar em um mercado competitivo. </div>
+                                tradicional</strong> para você se destacar em um mercado competitivo. </div>
                         <div class="amazing__step-number-1">1</div>
                     </div>
                 </div>
