--- a/faq.html
+++ b/faq.html
@@ -400,7 +400,7 @@
                     <div class="boosted__btn-container">
                         <a
                             class=" button boosted__btn w-button"
-                            href="https://api.whatsapp.com/send?phone=+5547988194381"
+                            href="https://wa.me/5547988194381"
                             target="_blank"
                         >Ok, vamos lá!</a>
                     </div>
